gitops/apps/ai-chat-proxy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rag-api
  namespace: ai-chat
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: ai.filipcsupka.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rag-api
                port:
                  number: 8001
  tls:
    - hosts:
        - ai.filipcsupka.online
      secretName: rag-api-tls
